feat(backend): find logged user